--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.CALL_PHONE"
+    <uses-permission
+        android:name="android.permission.CALL_PHONE"
         tools:ignore="PermissionImpliesUnsupportedChromeOsHardware" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -25,142 +26,138 @@
     <application
         android:name=".ClassLuxApp"
         android:allowBackup="false"
-        android:fullBackupContent="false"
         android:autoMirrored="true"
+        android:fullBackupContent="false"
         android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:networkSecurityConfig="@xml/network_security_config"
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:allowBackup">
-
+        <activity
+            android:name=".activities.IntroScreen"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:exported="false" />
         <activity
             android:name=".activities.login.IntroActivity"
             android:configChanges="locale|orientation"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
-            android:name="com.pinkcar.user.activities.login.FaceBookLoginActivity"
+            android:name=".activities.login.FaceBookLoginActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Transparent.NoActionBar" />
         <activity
-            android:name="com.pinkcar.user.activities.login.GoogleLoginActivity"
+            android:name=".activities.login.GoogleLoginActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Transparent.NoActionBar" />
         <activity
-            android:name="com.pinkcar.user.activities.FullImage"
+            android:name=".activities.FullImage"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name="com.pinkcar.user.calender.AddOrEditCalendarActivity" />
+        <activity android:name=".calender.AddOrEditCalendarActivity" />
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
         <activity
-            android:name="com.pinkcar.user.activities.SplashScreen"
-            android:screenOrientation="portrait"
+            android:name=".activities.SplashScreen"
             android:exported="true"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             tools:ignore="InnerclassSeparator">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
         <activity
             android:name="com.razorpay.CheckoutActivity"
-            android:exported="true"
-             />
+            android:exported="true" />
 
-        <receiver android:name="com.razorpay.RzpTokenReceiver"
-            android:exported="true"/>
-
-
-
-
+        <receiver
+            android:name="com.razorpay.RzpTokenReceiver"
+            android:exported="true" />
 
         <activity
-            android:name="com.pinkcar.user.activities.Payment"
+            android:name=".activities.Payment"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.pinkcar.user.activities.OtpVerification"
+            android:name=".activities.OtpVerification"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.pinkcar.user.activities.UserReview"
+            android:name=".activities.UserReview"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.pinkcar.user.activities.MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustResize" />
         <activity
-            android:name="com.pinkcar.user.activities.EditProfile"
+            android:name=".activities.EditProfile"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden" />
         <activity
-            android:name="com.pinkcar.user.activities.PickUpNotes"
+            android:name=".activities.PickUpNotes"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden" />
         <activity
-            android:name="com.pinkcar.user.activities.ShowProfile"
+            android:name=".activities.ShowProfile"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden" />
         <activity
-            android:name="com.pinkcar.user.activities.AddCard"
+            android:name=".activities.AddCard"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustResize" />
         <activity
-            android:name="com.pinkcar.user.activities.HistoryDetails"
+            android:name=".activities.HistoryDetails"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustResize" />
         <activity
-            android:name="com.pinkcar.user.activities.HistoryActivity"
+            android:name=".activities.HistoryActivity"
             android:label="History"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.pinkcar.user.activities.ActivityWallet"
+            android:name=".activities.ActivityWallet"
             android:label="Wallet"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.pinkcar.user.activities.CouponActivity"
+            android:name=".activities.CouponActivity"
             android:label="Coupon"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden" />
         <activity
-            android:name="com.pinkcar.user.activities.ChangePassword"
+            android:name=".activities.ChangePassword"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustResize" />
         <activity
-            android:name="com.pinkcar.user.activities.NotificationTab"
+            android:name=".activities.NotificationTab"
             android:configChanges="orientation|keyboardHidden|screenLayout|screenSize"
-            android:label="@string/app_name"
             android:exported="true"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustResize"
-            >
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="com.quickridejadriver.providers.TARGETNOTIFICATION" />
 
@@ -168,47 +165,47 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.pinkcar.user.chat.UserChatActivity"
+            android:name=".chat.UserChatActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.pinkcar.user.activities.Profile"
+            android:name=".activities.Profile"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.pinkcar.user.activities.CustomGooglePlacesSearch"
+            android:name=".activities.CustomGooglePlacesSearch"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustResize" />
-        <activity android:name="com.pinkcar.user.activities.ActivityHelp" />
+        <activity android:name=".activities.ActivityHelp" />
         <activity
-            android:name="com.pinkcar.user.activities.SosCallActivity"
+            android:name=".activities.SosCallActivity"
             android:hardwareAccelerated="false"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.pinkcar.user.activities.LegalActivity"
+            android:name=".activities.LegalActivity"
             android:hardwareAccelerated="false"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.pinkcar.user.activities.TermsOfUseActivity"
+            android:name=".activities.TermsOfUseActivity"
             android:hardwareAccelerated="false"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.pinkcar.user.activities.PrivacyPolicyActivity"
+            android:name=".activities.PrivacyPolicyActivity"
             android:hardwareAccelerated="false"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.pinkcar.user.activities.UpdateProfile"
+            android:name=".activities.UpdateProfile"
             android:hardwareAccelerated="false"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.pinkcar.user.activities.FavouritePlaceSearch"
+            android:name=".activities.FavouritePlaceSearch"
             android:hardwareAccelerated="false"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -218,35 +215,34 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.pinkcar.user.activities.SignUp"
+            android:name=".activities.SignUp"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.pinkcar.user.activities.ForgotPassword"
+            android:name=".activities.ForgotPassword"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.pinkcar.user.activities.MediaHome"
+            android:name=".activities.MediaHome"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.pinkcar.user.activities.RunningTrip"
+            android:name=".activities.RunningTrip"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.pinkcar.user.activities.TrackActivity"
+            android:name=".activities.TrackActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.pinkcar.user.activities.PhoneNoUpdateActivity"
+            android:name=".activities.PhoneNoUpdateActivity"
             android:hardwareAccelerated="false"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
-
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -267,9 +263,9 @@
             android:name="com.razorpay.ApiKey"
             android:value="rzp_test_zGD0bTIi1I9XnS" />
 
-        <service android:name="com.pinkcar.user.fcm.FCMService"
-            android:exported="false"
-            >
+        <service
+            android:name=".fcm.FCMService"
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
